--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ li {
 
 .social {
 text-align: center;
-background-color: black;
+background-color: rgb(40,40,40);
 width: 702px;
 margin: 0 auto;
 position: relative;
