--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ margin: 0;
 
 #profil_image {
   width: 370px;
-  background-color: black;
+  background-color: rgba(40,40,40,0.2);
+  border-radius: 300px;
 }
 
 .headers {
