--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ margin: 0;
 
 #profil_image {
   width: 370px;
+  background-color: rgba(40,40,40,0.1);
+  border-radius: 185px;
+}
+
+#profil_image :hover{
+  width: 370px;
   background-color: rgba(40,40,40,0.2);
   border-radius: 185px;
 }
