--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ margin: 0;
 
 #profil_image {
   width: 370px;
-  background-color: rgba(40,40,40,0.1);
+  /*background-color: rgba(40,40,40,0.1);*/
   border-radius: 50%;
   margin: 0;
 }
